WebCore:

2009-10-28  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Jan Alonzo.

        [Gtk] Extraneous object of ROLE_PANEL in hierarchy for entries
        https://bugs.webkit.org/show_bug.cgi?id=25897

        Make text controls always implement the text interface, and the
        editable text interface when they are not read only. This is what
        ATK-users expect.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (getInterfaceMaskFromObject):

WebKit/gtk:

2009-10-28  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Jan Alonzo.

        [Gtk] Extraneous object of ROLE_PANEL in hierarchy for entries
        https://bugs.webkit.org/show_bug.cgi?id=25897

        Update test to also check that entries implement the AtkText
        interface.

        * tests/testatk.c:
        (run_get_text_tests):
        (test_webkit_atk_get_text_at_offset_forms):
        (test_webkit_atk_get_text_at_offset):
        (main):

Canonical link: https://commits.webkit.org/41650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50208 268f45cc-cd09-0410-ab3c-d52691b4dbfc